// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button applies the elementAttributes prop correctly 1`] = `
.emotion-0 {
  touch-action: manipulation;
  cursor: pointer;
  border: 1px solid transparent;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
  font-weight: 600;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-font-smoothing: antialiased;
  background-image: none;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 16px;
  height: 40px;
  background-color: #43B02A;
  color: #FFFFFF;
}

.emotion-0:hover {
  background-color: #177D05;
}

.emotion-0:active {
  background-color: #146e04;
}

.emotion-0:focus {
  background-color: #146e04;
}

<button
  aria-label="foo"
  className="emotion-0"
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
  type="button"
>
  Hi
</button>
`;

exports[`Button can render as a link if an href is provided 1`] = `
.emotion-0 {
  touch-action: manipulation;
  cursor: pointer;
  border: 1px solid transparent;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
  font-weight: 600;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-font-smoothing: antialiased;
  background-image: none;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 16px;
  height: 40px;
  background-color: #43B02A;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.emotion-0:hover {
  background-color: #177D05;
}

.emotion-0:active {
  background-color: #146e04;
}

.emotion-0:focus {
  background-color: #146e04;
}

<a
  className="emotion-0"
  disabled={false}
  href="/carrot"
  onClick={[Function]}
  onMouseDown={[Function]}
  type="button"
>
  Hi
</a>
`;

exports[`Button renders all sizes correctly 1`] = `
.emotion-0 {
  touch-action: manipulation;
  cursor: pointer;
  border: 1px solid transparent;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
  font-weight: 600;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-font-smoothing: antialiased;
  background-image: none;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 8px;
  padding-right: 8px;
  height: 24px;
  font-size: 11px;
  text-transform: uppercase;
  background-color: #43B02A;
  color: #FFFFFF;
}

.emotion-0:hover {
  background-color: #177D05;
}

.emotion-0:active {
  background-color: #146e04;
}

.emotion-0:focus {
  background-color: #146e04;
}

<button
  className="emotion-0"
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
  type="button"
>
  Primary Button
</button>
`;

exports[`Button renders all sizes correctly 2`] = `
.emotion-0 {
  touch-action: manipulation;
  cursor: pointer;
  border: 1px solid transparent;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
  font-weight: 600;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-font-smoothing: antialiased;
  background-image: none;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 14px;
  height: 32px;
  background-color: #43B02A;
  color: #FFFFFF;
}

.emotion-0:hover {
  background-color: #177D05;
}

.emotion-0:active {
  background-color: #146e04;
}

.emotion-0:focus {
  background-color: #146e04;
}

<button
  className="emotion-0"
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
  type="button"
>
  Primary Button
</button>
`;

exports[`Button renders all sizes correctly 3`] = `
.emotion-0 {
  touch-action: manipulation;
  cursor: pointer;
  border: 1px solid transparent;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
  font-weight: 600;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-font-smoothing: antialiased;
  background-image: none;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 16px;
  height: 40px;
  background-color: #43B02A;
  color: #FFFFFF;
}

.emotion-0:hover {
  background-color: #177D05;
}

.emotion-0:active {
  background-color: #146e04;
}

.emotion-0:focus {
  background-color: #146e04;
}

<button
  className="emotion-0"
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
  type="button"
>
  Primary Button
</button>
`;

exports[`Button renders all sizes correctly 4`] = `
.emotion-0 {
  touch-action: manipulation;
  cursor: pointer;
  border: 1px solid transparent;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
  font-weight: 600;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-font-smoothing: antialiased;
  background-image: none;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 24px;
  padding-right: 24px;
  font-size: 18px;
  height: 48px;
  background-color: #43B02A;
  color: #FFFFFF;
}

.emotion-0:hover {
  background-color: #177D05;
}

.emotion-0:active {
  background-color: #146e04;
}

.emotion-0:focus {
  background-color: #146e04;
}

<button
  className="emotion-0"
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
  type="button"
>
  Primary Button
</button>
`;

exports[`Button renders all snacks button variants correctly 1`] = `
.emotion-0 {
  touch-action: manipulation;
  cursor: pointer;
  border: 1px solid transparent;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
  font-weight: 600;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-font-smoothing: antialiased;
  background-image: none;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 16px;
  height: 40px;
  background-color: #43B02A;
  color: #FFFFFF;
}

.emotion-0:hover {
  background-color: #177D05;
}

.emotion-0:active {
  background-color: #146e04;
}

.emotion-0:focus {
  background-color: #146e04;
}

<button
  className="emotion-0"
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
  type="button"
>
  Hi
</button>
`;

exports[`Button renders all snacks button variants correctly 2`] = `
.emotion-0 {
  touch-action: manipulation;
  cursor: pointer;
  border: 1px solid transparent;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
  font-weight: 600;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-font-smoothing: antialiased;
  background-image: none;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 16px;
  height: 40px;
  background-color: transparent;
  color: #43B02A;
  border: 1px solid #43B02A;
}

.emotion-0:hover {
  color: #177D05;
  border: 1px solid #177D05;
}

.emotion-0:active {
  color: #146e04;
  border: 1px solid #146e04;
}

.emotion-0:focus {
  color: #146e04;
  border: 1px solid #146e04;
}

<button
  className="emotion-0"
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
  type="button"
>
  Hi
</button>
`;

exports[`Button renders all snacks button variants correctly 3`] = `
.emotion-0 {
  touch-action: manipulation;
  cursor: pointer;
  border: 1px solid transparent;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
  font-weight: 600;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-font-smoothing: antialiased;
  background-image: none;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 16px;
  height: 40px;
  background-color: transparent;
  color: #43B02A;
}

.emotion-0:hover {
  color: #177D05;
}

.emotion-0:active {
  color: #146e04;
}

.emotion-0:focus {
  color: #146e04;
}

<button
  className="emotion-0"
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
  type="button"
>
  Hi
</button>
`;

exports[`Button renders all snacks button variants correctly 4`] = `
.emotion-0 {
  touch-action: manipulation;
  cursor: pointer;
  border: 1px solid transparent;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
  font-weight: 600;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-font-smoothing: antialiased;
  background-image: none;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 16px;
  height: 40px;
  background-color: #FFFFFF;
  color: #E6003D;
  border: 1px dashed #E6003D;
}

.emotion-0:hover {
  border: 1px dashed #CC0033;
  color: #CC0033;
}

.emotion-0:active {
  border: 1px dashed #B30029;
  color: #B30029;
}

.emotion-0:focus {
  border: 1px dashed #B30029;
  color: #B30029;
}

<button
  className="emotion-0"
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
  type="button"
>
  Hi
</button>
`;

exports[`Button renders correctly when disabled 1`] = `
.emotion-0 {
  touch-action: manipulation;
  cursor: pointer;
  border: 1px solid transparent;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
  font-weight: 600;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-font-smoothing: antialiased;
  background-image: none;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 16px;
  height: 40px;
  background-color: #BDBDBD;
  color: #FFFFFF;
  cursor: not-allowed;
}

<button
  className="emotion-0"
  disabled={true}
  onClick={[Function]}
  onMouseDown={[Function]}
  type="button"
>
  Hi
</button>
`;

exports[`Button renders icons correctly 1`] = `
.emotion-2 {
  touch-action: manipulation;
  cursor: pointer;
  border: 1px solid transparent;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
  font-weight: 600;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-font-smoothing: antialiased;
  background-image: none;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 16px;
  height: 40px;
  background-color: #43B02A;
  color: #FFFFFF;
}

.emotion-2:hover {
  background-color: #177D05;
}

.emotion-2:active {
  background-color: #146e04;
}

.emotion-2:focus {
  background-color: #146e04;
}

.emotion-0 {
  font-size: 16px;
  position: relative;
  font-family: ic-icons;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  speak: none;
  line-height: 1;
  font-smoothing: antialiased;
  osx-font-smoothing: grayscale;
}

.emotion-1 {
  margin-right: 8px;
}

<button
  className="emotion-2"
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
  type="button"
>
  <i
    aria-hidden={true}
    className="emotion-0"
  >
    
  </i>
  <span
    className="emotion-1"
  />
  Hi
</button>
`;

exports[`Button renders icons correctly 2`] = `
.emotion-2 {
  touch-action: manipulation;
  cursor: pointer;
  border: 1px solid transparent;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
  font-weight: 600;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-font-smoothing: antialiased;
  background-image: none;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 16px;
  height: 40px;
  background-color: #43B02A;
  color: #FFFFFF;
}

.emotion-2:hover {
  background-color: #177D05;
}

.emotion-2:active {
  background-color: #146e04;
}

.emotion-2:focus {
  background-color: #146e04;
}

.emotion-1 {
  font-size: 16px;
  position: relative;
  font-family: ic-icons;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  speak: none;
  line-height: 1;
  font-smoothing: antialiased;
  osx-font-smoothing: grayscale;
}

.emotion-0 {
  margin-left: 8px;
}

<button
  className="emotion-2"
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
  type="button"
>
  Hi
  <span
    className="emotion-0"
  />
  <i
    aria-hidden={true}
    className="emotion-1"
  >
    
  </i>
</button>
`;

exports[`Button renders icons correctly 3`] = `
.emotion-2 {
  touch-action: manipulation;
  cursor: pointer;
  border: 1px solid transparent;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
  font-weight: 600;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-font-smoothing: antialiased;
  background-image: none;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 16px;
  height: 40px;
  background-color: #43B02A;
  color: #FFFFFF;
}

.emotion-2:hover {
  background-color: #177D05;
}

.emotion-2:active {
  background-color: #146e04;
}

.emotion-2:focus {
  background-color: #146e04;
}

.emotion-0 {
  font-size: 16px;
  position: relative;
  font-family: ic-icons;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  speak: none;
  line-height: 1;
  font-smoothing: antialiased;
  osx-font-smoothing: grayscale;
}

.emotion-1 {
  margin-right: 8px;
}

<button
  className="emotion-2"
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
  type="button"
>
  <i
    aria-hidden={true}
    className="emotion-0"
  >
    
  </i>
  <span
    className="emotion-1"
  />
  Hi
</button>
`;

exports[`Button renders icons correctly 4`] = `
.emotion-2 {
  touch-action: manipulation;
  cursor: pointer;
  border: 1px solid transparent;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
  font-weight: 600;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-font-smoothing: antialiased;
  background-image: none;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 16px;
  height: 40px;
  background-color: #43B02A;
  color: #FFFFFF;
}

.emotion-2:hover {
  background-color: #177D05;
}

.emotion-2:active {
  background-color: #146e04;
}

.emotion-2:focus {
  background-color: #146e04;
}

.emotion-1 {
  font-size: 16px;
  position: relative;
  font-family: ic-icons;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  speak: none;
  line-height: 1;
  font-smoothing: antialiased;
  osx-font-smoothing: grayscale;
}

.emotion-0 {
  margin-left: 8px;
}

<button
  className="emotion-2"
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
  type="button"
>
  Hi
  <span
    className="emotion-0"
  />
  <i
    aria-hidden={true}
    className="emotion-1"
  >
    
  </i>
</button>
`;

exports[`Button renders with inverted colors 1`] = `
.emotion-0 {
  touch-action: manipulation;
  cursor: pointer;
  border: 1px solid transparent;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
  font-weight: 600;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-font-smoothing: antialiased;
  background-image: none;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 14px;
  height: 32px;
  background-color: #43B02A;
  color: #FFFFFF;
  background-color: #FFFFFF;
  border: 1px solid #43B02A;
  color: #43B02A;
}

.emotion-0:hover {
  background-color: #177D05;
}

.emotion-0:active {
  background-color: #146e04;
}

.emotion-0:focus {
  background-color: #146e04;
}

.emotion-0:hover {
  background-color: #FFFFFF;
  opacity: 0.9;
}

.emotion-0:active {
  background-color: #FFFFFF;
  opacity: 0.8;
}

.emotion-0:focus {
  background-color: #FFFFFF;
  opacity: 0.8;
}

<button
  className="emotion-0"
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
  type="button"
>
  Hi
</button>
`;
